--- a/index.html
+++ b/index.html
@@ -1,12 +1,70 @@
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="device-width"  initial-scale="1.0">
-        <title>Document</title>
-    </head>
-    <body>
-        <h1>
-            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem harum rem aperiam doloribus aut? Facilis amet omnis aperiam, sit veritatis, consequatur ipsam magnam, sunt possimus nostrum laudantium unde magni tempora!</p>
-        </h1>
-    </body>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Your Name</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f0f0f0;
+        }
+        .container {
+            width: 80%;
+            margin: 0 auto;
+        }
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 10px 0;
+        }
+        header h1 {
+            margin: 0;
+            padding: 0 20px;
+        }
+        main {
+            padding: 20px 0;
+        }
+        footer {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 10px 0;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <div class="container">
+            <h1>Your Name</h1>
+        </div>
+    </header>
+    <main>
+        <div class="container">
+            <h2>Welcome to my website!</h2>
+            <p>This is a presentation page about myself.</p>
+        </div>
+
+
+
+        <section>
+            <h2>My Papers</h2>
+            <ul>
+                <li><a href="link_to_paper_1.pdf">Paper 1</a></li>
+                <li><a href="link_to_paper_2.pdf">Paper 2</a></li>
+                <!-- Add more papers as needed -->
+            </ul>
+        </section>    
+
+
+
+
+    </main>
+    <footer>
+        <p>© 2024 Your Name</p>
+    </footer>
+</body>
 </html>
